# SimpleGlitchV2

./: .clang-format  .gitignore  CMakeLists.txt  COMPATIBILITY.md  LICENSE  README.md  Taskfile.yml
.devcontainer/linux/: Dockerfile  devcontainer.json
.devcontainer/windows/: devcontainer.json
.github/workflows/: build.yaml
COMPILED/MAC/15.1v5/: SimpleGlitch2.dylib
COMPILED/MAC/16.0v1/: SimpleGlitch2.dylib
cmake/: FindNuke.cmake  findNuke.cmake
scripts/: zip_artifacts.sh
src/: CMakeLists.txt  SimpleGlitch.cpp  SimpleGlitch.h
